--- a/index.html
+++ b/index.html
@@ -81,15 +81,10 @@
                         </div>
                         <div id="dropdown-options" class="hidden absolute top-full right-0 mt-2 w-48 bg-white dark:bg-[#18181b] border border-gray-200 dark:border-[#27272a] rounded-xl shadow-xl overflow-hidden z-50 p-1">
                             <div onclick="selectModel('nano-banana-2-4k', 'nano-banana-2-4k')" class="model-option flex justify-between items-center px-3 py-2 rounded-lg cursor-pointer hover:bg-indigo-50 dark:hover:bg-[#27272a] group transition" data-val="nano-banana-2-4k">
-    <span class="text-xs font-bold text-gray-700 dark:text-gray-300 group-hover:text-indigo-600 dark:group-hover:text-indigo-400">nano-banana-2-4k</span>
-    <i class="fa-solid fa-check text-indigo-500 text-xs opacity-100 check-icon"></i>
-</div>
-
-<div onclick="selectModel('nano-banana-hd', 'nano-banana-hd')" class="model-option flex justify-between items-center px-3 py-2 rounded-lg cursor-pointer hover:bg-indigo-50 dark:hover:bg-[#27272a] group transition" data-val="nano-banana-hd">
-    <span class="text-xs font-bold text-gray-700 dark:text-gray-300 group-hover:text-indigo-600 dark:group-hover:text-indigo-400">nano-banana-hd</span>
-    <i class="fa-solid fa-check text-indigo-500 text-xs opacity-0 check-icon"></i>
-</div>
-                        </div>
+                                <span class="text-xs font-bold text-gray-700 dark:text-gray-300 group-hover:text-indigo-600 dark:group-hover:text-indigo-400">nano-banana-2-4k</span>
+                                <i class="fa-solid fa-check text-indigo-500 text-xs opacity-100 check-icon"></i>
+                            </div>
+                            </div>
                     </div>
                 </div>
 
@@ -260,7 +255,7 @@
     </div>
 
     <script>
-        const API_URL = "https://api.bltcy.ai/v1/images/Generations";
+        const API_URL = "https://api.bltcy.ai/v1/images/edits";
         const MAX_SLOTS = 9;
         let imageSlots = new Array(MAX_SLOTS).fill(null);
         let currentActiveSlot = -1; 
@@ -483,7 +478,10 @@
             document.getElementById('model-input').value = val;
             document.getElementById('current-model-text').innerText = text;
             const sizeSelect = document.getElementById('size-select');
-            if (val === 'nano-banana-hd') { sizeSelect.value = '2K'; sizeSelect.disabled = true; } else { sizeSelect.disabled = false; }
+            
+            // === 修改点：移除对 nano-banana-hd 的判断，始终允许选择分辨率 ===
+            sizeSelect.disabled = false;
+            
             document.querySelectorAll('.model-option').forEach(opt => {
                 const check = opt.querySelector('.check-icon');
                 if(opt.dataset.val === val) { check.classList.remove('opacity-0'); check.classList.add('opacity-100'); opt.classList.add('bg-indigo-50', 'dark:bg-[#27272a]'); } 
@@ -776,5 +774,3 @@
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"9166d45131dc47f3a1583bb5909a68ea","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
 </html>
-
-
