--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="w-8 h-8 bg-white rounded-lg flex items-center justify-center border border-gray-200 shadow-sm shrink-0 overflow-hidden text-purple-500">
                 <i class="fa-solid fa-image text-lg"></i>
             </div>
-            <span class="font-bold text-lg tracking-tight text-gray-900 dark:text-gray-100">编辑图片</span>
+            <span class="font-bold text-lg tracking-tight text-gray-900 dark:text-gray-100">Nano-banana-Pro</span>
         </div>
         <div class="flex items-center gap-3 text-sm">
             <a href="https://api.bltcy.ai/register?aff=dlam79084" target="_blank" class="bg-green-500 hover:bg-green-600 text-white text-xs font-bold px-3 py-1.5 rounded transition shadow-sm flex items-center gap-1">
@@ -719,4 +719,5 @@
     </script>
 </body>
 </html>
+
 
