--- a/index.html
+++ b/index.html
@@ -130,8 +130,12 @@
                     <div class="relative">
                         <select id="ratio-select" class="w-full custom-input rounded px-3 py-2 text-sm bg-gray-50 border-gray-300 text-black dark:bg-[#18181b] dark:border-[#27272a] dark:text-white appearance-none cursor-pointer">
                             <option value="1:1">1:1 (正方形)</option>
+                            <option value="2:3">2:3 (竖屏)</option>
+                            <option value="3:2">3:2 (横屏)</option>
                             <option value="3:4">3:4 (竖屏)</option>
                             <option value="4:3">4:3 (横屏)</option>
+                            <option value="4:5">4:5 (竖屏)</option>
+                            <option value="5:4">5:4 (横屏)</option>
                             <option value="9:16">9:16 (手机屏)</option>
                             <option value="16:9">16:9 (电脑屏)</option>
                             <option value="21:9">21:9 (超宽屏)</option>
@@ -570,3 +574,4 @@
     </script>
 </body>
 </html>
+
